<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/democratic"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_candidate1Name"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:id="@+id/textView2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_candidate1Party"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Contacts:"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_candidate1Contacts"
                android:id="@+id/textView5" />
        </LinearLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:src="@drawable/rj"
            android:id="@+id/imageView" />
    </RelativeLayout>


    <include layout="@layout/twitter_template" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_candidate1Detail"
        android:visibility="gone"
        android:id="@+id/textView9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33000000"
        android:gravity="center"
        android:clickable="true"
        android:onClick="expand">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/button_expand"
            android:textColor="#DDDDDD"
            android:textAlignment="center"
            android:id="@+id/textView8"
            android:singleLine="false"
            android:soundEffectsEnabled="false" />

    </RelativeLayout>

</LinearLayout>